tests/golden/type_errors/nullable_nil_to_nonnullable_struct_field.cd
struct Box { value: number }
let box: Box = Box { value: nil };
